adding manually processed papers

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -53,7 +53,6 @@
   groups    = {_Reviews / Surveys - Com Det},
   owner     = {Vincent},
   timestamp = {2015.02.20},
-  url       = {http://www.nrcresearchpress.com/doi/abs/10.1139/cjp-2013-0652#.VOezbPmG90a},
 }
 
 @Article{Abbe2014,
@@ -1151,6 +1150,29 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.04},
+}
+
+@InProceedings{Bach2012,
+  author    = {Bach, S. and Broecheler, M. and Getoor, L. and O'leary, D.},
+  title     = {Scaling MPE Inference for Constrained Continuous Markov Random Fields with Consensus Optimization},
+  booktitle = {Advances in Neural Information Processing Systems},
+  year      = {2012},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.01},
+  url       = {https://papers.nips.cc/paper/4772-scaling-mpe-inference-for-constrained-continuous-markov-random-fields-with-consensus-optimization},
+}
+
+@InProceedings{Bach2013,
+  author    = {Bach, S. H. and Huang, B. and London, B. and Getoor, L.},
+  title     = {Hinge-loss Markov random fields: convex inference for structured prediction},
+  booktitle = {29th Conference on Uncertainty in Artificial Intelligence},
+  year      = {2013},
+  pages     = {32-41},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.01},
+  url       = {http://dl.acm.org/citation.cfm?id=3023642},
 }
 
 @InProceedings{Backstrom2006,
@@ -2628,6 +2650,18 @@
   timestamp = {2017.07.03},
 }
 
+@InProceedings{Broecheler2010,
+  author    = {Bröcheler, M. and Mihalkova, L. and Getoor, L.},
+  title     = {Probabilistic similarity logic},
+  booktitle = {26th Conference on Uncertainty in Artificial Intelligence},
+  year      = {2010},
+  pages     = {73-82},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.01},
+  url       = {http://dl.acm.org/citation.cfm?id=3023558},
+}
+
 @Article{Bron1973a,
   author    = {Bron, C. and Kerbosch, J.},
   title     = {Algorithm 457: finding all cliques of an undirected graph},
@@ -3739,7 +3773,7 @@
   __markedentry = {[Vincent:]},
   doi           = {10.1088/1674-1056/26/1/018901},
   file          = {:Community detection in signed networks based on discrete-time model.pdf:PDF},
-  groups        = {Graph Partitioning, Not Found},
+  groups        = {Graph Partitioning, Done Manually},
   owner         = {Vincent},
   timestamp     = {2017.05.03},
 }
@@ -3913,11 +3947,12 @@
   title     = {On Community Detection in Real-World Networks and the Importance of Degree Assortativity},
   booktitle = {ACM SIGKDD Conference on Knowledge Discovery and Data Mining},
   year      = {2013},
+  pages     = {1007-1015},
+  doi       = {10.1145/2487575.2487666},
   file      = {:On Community Detection in Real-World Networks and the Importance of Degree Assortativity.pdf:PDF},
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2013.08.15},
-  url       = {http://www.idi.ntnu.no/~noervaag/papers/KDD2013.pdf},
 }
 
 @Article{Ciliberti2005,
@@ -6518,6 +6553,20 @@
   timestamp = {2017.06.30},
 }
 
+@Article{Gatterbauer2015,
+  author    = {Gatterbauer, W. and Günnemann, S. and Koutra, D. and Faloutsos, C.},
+  title     = {Linearized and single-pass belief propagation},
+  journal   = {Proceedings of the VLDB Endowment},
+  year      = {2015},
+  volume    = {8},
+  number    = {5},
+  pages     = {581-592},
+  doi       = {10.14778/2735479.2735490},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+}
+
 @Article{Gawronski2005,
   author    = {Gawroński, P. and Kułakowski, K.},
   title     = {Heider balance in human networks},
@@ -6751,6 +6800,20 @@
   timestamp     = {2017.06.01},
 }
 
+@InProceedings{Girdhar2017,
+  author    = {Girdhar, N. and Bharadwaj, K. K.},
+  title     = {Signed Social Networks: A Survey},
+  booktitle = {Advances in Computing and Data Sciences},
+  year      = {2017},
+  volume    = {721},
+  series    = {Communications in Computer and Information Science},
+  pages     = {326-335},
+  doi       = {10.1007/978-981-10-5427-3_35},
+  file      = {:Signed Social Networks- A Survey.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.07.28},
+}
+
 @InProceedings{Giridhar2006,
   author    = {Giridhar, A. and Kumar, P. R.},
   title     = {Distributed Clock Synchronization over Wireless Networks: Algorithms and Analysis},
@@ -6935,6 +6998,18 @@
   groups    = {Found},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@InProceedings{Gomez2009a,
+  author    = {Gómez, V. and Kappen, H. J. and Chertkov, M.},
+  title     = {Approximate inference on planar graphs using loop calculus and belief propagation},
+  booktitle = {25th Conference on Uncertainty in Artificial Intelligence},
+  year      = {2009},
+  pages     = {195-202},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+  url       = {http://dl.acm.org/citation.cfm?id=1795138},
 }
 
 @Article{Gong2011a,
@@ -8274,7 +8349,7 @@
 }
 
 @Book{Horvath2011,
-  title     = {Weighted Network Analysis},
+  title     = {Weighted Network Analysis - Applications in genomics and systems biology},
   publisher = {Springer},
   year      = {2011},
   author    = {Horvath, S.},
@@ -8768,6 +8843,31 @@
   groups        = {Graph Partitioning, Ignored},
   owner         = {Vincent},
   timestamp     = {2017.06.28},
+}
+
+@InProceedings{Ichise2006,
+  author    = {Ichise, R. and Takeda, H. and Kouno, S. and Muraki, T.},
+  title     = {A mining method of communities keeping tacit knowledge},
+  booktitle = {6th IEEE International Conference on Data Mining},
+  year      = {2006},
+  doi       = {10.1109/icdmw.2006.11},
+  file      = {:A mining method of communities keeping tacit knowledge.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.01},
+}
+
+@Article{Ihler2005,
+  author    = {Ihler, A. T. and Fischer, J. W. and Willsky, A. S.},
+  title     = {Loopy belief propagation: Convergence and effects of message errors},
+  journal   = {Journal of Machine Learning Research},
+  year      = {2005},
+  volume    = {6},
+  pages     = {905-936},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+  url       = {http://dl.acm.org/citation.cfm?id=1088703},
 }
 
 @InProceedings{Ilev2016,
@@ -10049,6 +10149,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.06.30},
 }
 
+@Article{Krapivsky2002,
+  author    = {Krapivsky, P. L. and Redner, S.},
+  title     = {A statistical physics perspective on Web growth},
+  journal   = {Computer Networks},
+  year      = {2002},
+  volume    = {39},
+  number    = {3},
+  pages     = {261-276},
+  doi       = {10.1016/s1389-1286(02)00212-8},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.01},
+}
+
 @Article{Krasnogor2005,
   author    = {Krasnogor, N. and Smith, J.},
   title     = {A Tutorial for Competent Memetic Algorithms: Model, Taxonomy, and Design Issues},
@@ -10683,6 +10797,19 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.06.28},
 }
 
+@InCollection{Lauritzen1990,
+  author    = {Lauritzen, S. L. and Spiegelhalter, D. J.},
+  title     = {Local computations with probabilities on graphical structures and their application to expert systems},
+  booktitle = {Readings in uncertain reasoning},
+  publisher = {Morgan Kaufmann Publishers},
+  year      = {1990},
+  pages     = {415-448},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.01},
+  url       = {http://dl.acm.org/citation.cfm?id=85343},
+}
+
 @Article{Lazar2010,
   author    = {Lazar, A. and Abel, D. and Vicsek, T.},
   title     = {Modularity measure of networks with overlapping communities},
@@ -10747,6 +10874,19 @@ old title: The map equation and the resolution limit in community detection},
   doi       = {10.1109/isit.2015.7282989},
   owner     = {Vincent},
   timestamp = {2017.07.27},
+}
+
+@Article{Lee2017a,
+  author        = {Lee, K.-M. and Shin, E. and You, S.},
+  title         = {An economic model of friendship and enmity for measuring social balance in networks},
+  journal       = {Physica A},
+  year          = {2017},
+  volume        = {in press},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1016/j.physa.2017.07.012},
+  file          = {:An economic model of friendship and enmity for measuring social balance in networks.pdf:PDF},
+  owner         = {Vincent},
+  timestamp     = {2017.07.28},
 }
 
 @InCollection{Leeuw2005,
@@ -11230,6 +11370,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2013.08.17},
 }
 
+@Article{Li2014,
+  author    = {Li, D. and Xu, Z.-M. and Chakraborty, N. and Gupta, A. and Sycara, K. and Li, S.},
+  title     = {Polarity Related Influence Maximization in Signed Social Networks},
+  journal   = {PLoS ONE},
+  year      = {2014},
+  volume    = {9},
+  number    = {7},
+  pages     = {e102199},
+  doi       = {10.1371/journal.pone.0102199},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.01},
+}
+
 @Article{Li2014s,
   author    = {Li, H.-J. and Wang, H. and Chen, L.},
   title     = {Measuring robustness of community structure in complex networks},
@@ -11340,7 +11494,7 @@ old title: The map equation and the resolution limit in community detection},
   __markedentry = {[Vincent:]},
   doi           = {10.1109/TrustCom.2016.0246},
   file          = {:Community Detection in Complicated Network Based on the Multi-view Weighted Signed Permanence.pdf:PDF},
-  groups        = {Graph Partitioning, Not Found},
+  groups        = {Graph Partitioning, Done Manually},
   owner         = {Vincent},
   timestamp     = {2017.02.15},
 }
@@ -11755,6 +11909,17 @@ old title: The map equation and the resolution limit in community detection},
   timestamp     = {2017.05.11},
 }
 
+@InProceedings{London2013,
+  author    = {London, B. and Khamis, S. and Bach, S. H. and Huang, B. and Getoor, L. and Davis, L.},
+  title     = {Collective Activity Detection Using Hinge-loss Markov Random Fields},
+  booktitle = {IEEE Conference on Computer Vision and Pattern Recognition Workshops},
+  year      = {2013},
+  doi       = {10.1109/cvprw.2013.157},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.01},
+}
+
 @Article{Lorrain1971,
   author    = {Lorrain, F. and White, H.},
   title     = {Structural equivalence of individuals in social networks},
@@ -12164,6 +12329,19 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.30},
+}
+
+@InProceedings{Maniu2011,
+  author    = {Maniu, S. and Cautis, B. and Abdessalem, T.},
+  title     = {Building a signed network from interactions in Wikipedia},
+  booktitle = {Databases and Social Networks},
+  year      = {2011},
+  pages     = {19-24},
+  doi       = {10.1145/1996413.1996417},
+  file      = {:Building a signed network from interactions in Wikipedia.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2014.10.22},
 }
 
 @InProceedings{Maniu2011a,
@@ -13165,7 +13343,7 @@ old title: The map equation and the resolution limit in community detection},
   pages     = {67-80},
   doi       = {10.1007/978-3-319-54241-6_6},
   file      = {:Community Detection in Signed Networks Based on Extended Signed Modularity.pdf:PDF},
-  groups    = {Not Found},
+  groups    = {Done Manually},
   owner     = {Vincent},
   timestamp = {2017.03.04},
 }
@@ -14579,6 +14757,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2010.06.03},
 }
 
+@Article{Potts1952,
+  author    = {Potts, R. B. and Domb, C.},
+  title     = {Some generalized order-disorder transformations},
+  journal   = {Mathematical Proceedings of the Cambridge Philosophical Society},
+  year      = {1952},
+  volume    = {48},
+  number    = {01},
+  pages     = {106},
+  doi       = {10.1017/s0305004100027419},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.01},
+}
+
 @InProceedings{Prakash2009,
   author    = {Prakash, B. A. and Seshadri, M. and Sridharan, A. and Machiraju, S. and Faloutsos, C.},
   title     = {EigenSpokes: Surprising Patterns and Scalable Community Chipping in Large Graphs},
@@ -14632,6 +14824,18 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2011.06.28},
+}
+
+@InProceedings{Pujara2013,
+  author    = {Pujara, J. and Miao, H. and Getoor, L. and Cohen, W.},
+  title     = {Knowledge Graph Identification},
+  booktitle = {12th International Semantic Web Conference},
+  year      = {2013},
+  pages     = {542-557},
+  doi       = {10.1007/978-3-642-41335-3_34},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.01},
 }
 
 @Article{Pujol2006,
@@ -15437,7 +15641,7 @@ old title: The map equation and the resolution limit in community detection},
   year      = {2015},
   pages     = {15},
   file      = {:Convex inference for community discovery in signed networks.pdf:PDF},
-  groups    = {Not Found},
+  groups    = {Done Manually},
   owner     = {Vincent},
   timestamp = {2015.12.30},
   url       = {http://web.stanford.edu/~jugander/NetworksNIPS2015/papers/NIPS_Networks_2015_paper_15.pdf},
@@ -15948,7 +16152,7 @@ old title: The map equation and the resolution limit in community detection},
   number    = {6},
   pages     = {213-218},
   file      = {:Detecting Community Structures in Signed Social Networks (An Automated Approach).pdf:PDF},
-  groups    = {Not Found},
+  groups    = {Done Manually},
   owner     = {Vincent},
   timestamp = {2015.07.07},
   url       = {https://www.erpublication.org/admin/vol_issue1/upload%20Image/IJETR032550.pdf},
@@ -16462,6 +16666,18 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.02},
+}
+
+@InProceedings{Song2017,
+  author    = {Song, Dongjin and Meyer, David A.},
+  title     = {Recommending positive links in signed social networks by optimizing a generalized AUC},
+  booktitle = {29th AAAI Conference on Artificial Intelligence},
+  year      = {2017},
+  pages     = {290-296},
+  groups    = {Others},
+  owner     = {Vincent},
+  timestamp = {2017.08.01},
+  url       = {http://dl.acm.org/citation.cfm?id=2887048},
 }
 
 @Article{Sontag2007,
@@ -17832,6 +18048,20 @@ old title: The map equation and the resolution limit in community detection},
   url           = {https://open.library.ubc.ca/cIRcle/collections/ubctheses/24/items/1.0347257},
 }
 
+@Article{Wainwright2007,
+  author    = {Wainwright, M. J. and Jordan, M. I.},
+  title     = {Graphical Models, Exponential Families, and Variational Inference},
+  journal   = {Foundations and Trends in Machine Learning},
+  year      = {2007},
+  volume    = {1},
+  number    = {1-2},
+  pages     = {1-305},
+  doi       = {10.1561/2200000001},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.01},
+}
+
 @Article{Wainwright2010,
   author    = {Wainwright, M. J. and Maneva, E. and Martinian, E.},
   title     = {Lossy Source Compression Using Low-Density Generator Matrix Codes: Analysis and Algorithms},
@@ -18738,6 +18968,21 @@ old title: The map equation and the resolution limit in community detection},
   doi       = {10.1007/11811305_45},
   file      = {:Self-Organizing Network Evolving Model for Mining Network Community Structure.pdf:PDF},
   groups    = {Found},
+  owner     = {Vincent},
+  timestamp = {2012.08.31},
+}
+
+@Article{Yang2006c,
+  author    = {Yang, B. and Liu, D.-Y.},
+  title     = {Force-Based Incremental Algorithm for Mining Community Structure in Dynamic Network},
+  journal   = {Journal of Computer Science and Technology},
+  year      = {2006},
+  volume    = {21},
+  number    = {3},
+  pages     = {393-400},
+  doi       = {10.1007/s11390-006-0393-1},
+  file      = {:Force-Based Incremental Algorithm for Mining Community Structure in Dynamic Network.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2012.08.31},
 }
