adding manually processed papers

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -55,6 +55,31 @@
   timestamp = {2015.02.20},
 }
 
+@InProceedings{Elson2010,
+  author    = {Elson, D. K and Dames, N. and McKeown, K. R.},
+  title     = {Extracting social networks from literary fiction},
+  booktitle = {48th annual meeting of the ACL},
+  year      = {2010},
+  pages     = {138-147},
+  abstract  = {We present a method for extracting social networks from literature,
+	namely, nineteenth-century British novels and serials. We derive
+	the networks from dialogue interactions, and thus our method depends
+	on the ability to determine when two characters are in conversation.
+	Our approach involves character name chunking, quoted speech attribution
+	and conversation detection given the set of quotes. We extract features
+	from the social networks and examine their correlation with one another,
+	as well as with metadata such as the novel's setting. Our results
+	provide evidence that the majority of novels in this time period
+	do not fit two characterizations provided by literacy scholars. Instead,
+	our results suggest an alternative explanation for differences in
+	social networks.},
+  file      = {:Extracting social networks from literary fiction.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2015.07.06},
+  url       = {http://dl.acm.org/citation.cfm?id=1858696},
+}
+
 @Article{Abbe2014,
   author    = {Abbe, E. and Bandeira, A. S. and Bracher, A. and Singer, A.},
   title     = {Decoding Binary Node Labels from Censored Edge Measurements: Phase Transition and Efficient Recovery},
@@ -375,6 +400,18 @@
   groups    = {Just balance, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.15},
+}
+
+@InProceedings{Akkaya2010,
+  author    = {Akkaya, C. and Conrad, A. and Wiebe, J. and Mihalcea, R.},
+  title     = {Amazon Mechanical Turk for subjectivity word sense disambiguation},
+  booktitle = {NAACL HLT Workshop on Creating Speech and Language Data with Amazon's Mechanical Turk},
+  year      = {2010},
+  pages     = {195-203},
+  groups    = {Others},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+  url       = {http://dl.acm.org/citation.cfm?id=1866727},
 }
 
 @Article{Alba1973,
@@ -1310,6 +1347,17 @@
   timestamp = {2017.07.03},
 }
 
+@InProceedings{Banea2008,
+  author    = {Banea, C. and Mihalcea, R. and Wiebe, J.},
+  title     = {A bootstrapping method for building subjectivity lexicons for languages with scarce resources},
+  booktitle = {Language Resources and Evaluation Conference},
+  year      = {2008},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+  url       = {http://aclasb.dfki.de/nlp/bib/L08-1086},
+}
+
 @Article{Banerjee1992,
   author    = {Banerjee, A. V.},
   title     = {A Simple Model of Herd Behavior},
@@ -1364,6 +1412,16 @@
   groups    = {_To do},
   owner     = {Vincent},
   timestamp = {2016.01.08},
+}
+
+@InProceedings{Bansal2008,
+  author    = {Bansal, M. and Cardie, C. and Lee, L.},
+  title     = {The power of negative thinking: Exploiting label disagreement in the min-cut classification framework},
+  booktitle = {23rd International Conference on Computational Linguistics},
+  year      = {2008},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+  url       = {http://www.cs.cornell.edu/home/llee/papers/disagree.home.html},
 }
 
 @Article{Barabasi1999a,
@@ -2525,6 +2583,18 @@
   timestamp = {2017.07.23},
 }
 
+@InProceedings{Bramsen2011,
+  author    = {Bramsen, P. and Escobar-Molano, M. and Patel, A. and Alonso, R.},
+  title     = {Extracting social power relationships from natural language},
+  booktitle = {49th Annual Meeting of the ACL: Human Language Technologies},
+  year      = {2011},
+  pages     = {773-782},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+  url       = {http://dl.acm.org/citation.cfm?id=2002570},
+}
+
 @Article{Brandes2006a,
   author    = {Brandes, U. and Fleischer, D. and Lerner, J.},
   title     = {Summarizing Dynamic Bipolar Conflict Structures},
@@ -3023,6 +3093,17 @@
   timestamp = {2017.07.01},
 }
 
+@InProceedings{Bunescu2005,
+  author    = {Bunescu, R. C. and Mooney, R. J.},
+  title     = {A shortest path dependency kernel for relation extraction},
+  booktitle = {Conference on Human Language Technology and Empirical Methods in Natural Language Processing},
+  year      = {2005},
+  doi       = {10.3115/1220575.1220666},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+}
+
 @Article{Burer2002,
   author    = {Burer, S. and Monteiro, R. D. C. and Zhang, Y.},
   title     = {Rank-Two Relaxation Heuristics for MAX-CUT and Other Binary Quadratic Programs},
@@ -3220,6 +3301,18 @@
   owner     = {Vincent},
   timestamp = {2017.07.15},
   url       = {https://uncch.pure.elsevier.com/en/publications/random-walker-ranking-for-ncaa-division-i-a-football},
+}
+
+@InProceedings{Callison-Burch2009,
+  author    = {Callison-Burch, C.},
+  title     = {Fast, cheap, and creative: evaluating translation quality using Amazon's Mechanical Turk},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2009},
+  pages     = {286-295},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+  url       = {http://dl.acm.org/citation.cfm?id=1699548},
 }
 
 @Article{Cambria2013,
@@ -4395,6 +4488,18 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.30},
+}
+
+@InProceedings{DanescuNiculescuMizil2012,
+  author    = {Danescu-Niculescu-Mizil, C. and Lee, L. and Pang, B. and Kleinberg, J.},
+  title     = {Echoes of power: language effects and power differences in social interaction},
+  booktitle = {21st International Conference on World Wide Web},
+  year      = {2012},
+  pages     = {699-708},
+  doi       = {10.1145/2187836.2187931},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
 }
 
 @Article{Daneshyari2011,
@@ -6449,6 +6554,18 @@
   timestamp = {2017.07.22},
 }
 
+@InProceedings{Galley2004,
+  author    = {Galley, M. and McKeown, K. and Hirschberg, J. and Shriberg, E.},
+  title     = {Identifying agreement and disagreement in conversational speech: use of Bayesian networks to model pragmatic dependencies},
+  booktitle = {42nd Annual Meeting on ACL},
+  year      = {2004},
+  pages     = {669},
+  doi       = {10.3115/1218955.1219040},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+}
+
 @TechReport{Gallier2015,
   author      = {Gallier, J.},
   title       = {Spectral Theory of Unsigned and Signed Graphs - Applications to Graph Clustering: a Survey},
@@ -7292,6 +7409,16 @@
   timestamp = {2017.06.27},
 }
 
+@InProceedings{Gruzd2008,
+  author    = {Gruzd, A. and Haythornthwaite, C.},
+  title     = {Automated discovery and analysis of social networks from threaded discussions},
+  booktitle = {International Network of Social Network Analysis},
+  year      = {2008},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+  url       = {http://arizona.openrepository.com/arizona/handle/10150/105081},
+}
+
 @Article{Gudkov2008,
   author    = {Gudkov, V. and Montealegre, V. and Nussinov, S. and Nussinov, Z.},
   title     = {Community detection in complex networks by dynamical simplex evolution},
@@ -7841,6 +7968,18 @@
   timestamp = {2017.06.29},
 }
 
+@InProceedings{Hassan2010,
+  author    = {Hassan, Ahmed and Qazvinian, Vahed and Radev, Dragomir},
+  title     = {What's with the attitude?: identifying sentences with attitude in online discussions},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2010},
+  pages     = {1245-1255},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+  url       = {http://dl.acm.org/citation.cfm?id=1870779},
+}
+
 @InProceedings{Hassan2012a,
   author        = {Hassan, A. and Abu-Jbara, A. and Radev, D.},
   title         = {Detecting subgroups in online discussions by modeling positive and negative relations among participants},
@@ -7864,6 +8003,28 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.05},
+}
+
+@InProceedings{Hatzivassiloglou1997,
+  author    = {Hatzivassiloglou, V. and McKeown, K. R.},
+  title     = {Predicting the semantic orientation of adjectives},
+  booktitle = {35th Annual Meeting of the ACL and 8th conference on European chapter of the ACL},
+  year      = {1997},
+  doi       = {10.3115/979617.979640},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+}
+
+@InProceedings{Hatzivassiloglou2000,
+  author    = {Hatzivassiloglou, V. and Wiebe, J. M.},
+  title     = {Effects of adjective orientation and gradability on sentence subjectivity},
+  booktitle = {18th conference on Computational linguistics},
+  year      = {2000},
+  doi       = {10.3115/990820.990864},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
 }
 
 @Article{He2009,
@@ -8574,7 +8735,7 @@
 @InProceedings{Huang2012,
   author    = {Huang, E. H. and Socher, R. and Manning, C. D. and Ng, A. Y.},
   title     = {Improving word representations via global context and multiple word prototypes},
-  booktitle = {50th Annual Meeting of the Association for Computational Linguistics},
+  booktitle = {50th Annual Meeting of the ACL},
   year      = {2012},
   pages     = {873-882},
   groups    = {Others, Ignored},
@@ -9696,6 +9857,17 @@ old title: The map equation and the resolution limit in community detection},
   url       = {http://www.jstor.org/stable/2704240},
 }
 
+@InProceedings{Kim2004,
+  author    = {Kim, S.-M. and Hovy, E.},
+  title     = {Determining the sentiment of opinions},
+  booktitle = {20th international conference on Computational Linguistics},
+  year      = {2004},
+  doi       = {10.3115/1220355.1220555},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+}
+
 @Article{Kim2005a,
   author        = {Kim, D.-H. and Jeong, H.},
   title         = {Systematic analysis of group identification in stock markets},
@@ -9908,6 +10080,17 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2017.07.11},
   url       = {http://dl.acm.org/citation.cfm?id=655989},
+}
+
+@InProceedings{Klein2003,
+  author    = {Klein, D. and Manning, C. D.},
+  title     = {Accurate unlexicalized parsing},
+  booktitle = {41st Annual Meeting on ACL},
+  year      = {2003},
+  doi       = {10.3115/1075096.1075150},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
 }
 
 @InProceedings{Kleinberg1998,
@@ -10854,7 +11037,7 @@ old title: The map equation and the resolution limit in community detection},
 }
 
 @Article{Le2015,
-  author    = {Le, Phong and Zuidema, Willem},
+  author    = {Le, P. and Zuidema, W.},
   title     = {Compositional Distributional Semantics with Long Short Term Memory},
   journal   = {arXiv},
   year      = {2015},
@@ -10914,6 +11097,16 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.17},
+}
+
+@Book{Lehrer1974,
+  title     = {Semantic fields and lexical structure},
+  publisher = {North Holland},
+  year      = {1974},
+  author    = {Lehrer, A.},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+  url       = {https://books.google.fr/books/about/Semantic_Fields_and_Lexical_Structure.html?id=L8BrAAAAIAAJ&redir_esc=y},
 }
 
 @Article{Leicht2006,
@@ -11657,7 +11850,7 @@ old title: The map equation and the resolution limit in community detection},
 @InProceedings{Lin1998,
   author    = {Lin, D.},
   title     = {Automatic retrieval and clustering of similar words},
-  booktitle = {36th Annual Meeting of the Association for Computational Linguistics / 17th international conference on Computational linguistics},
+  booktitle = {36th Annual Meeting of the ACL / 17th international conference on Computational linguistics},
   year      = {1998},
   doi       = {10.3115/980691.980696},
   owner     = {Vincent},
@@ -11674,6 +11867,17 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2017.07.27},
   url       = {http://dl.acm.org/citation.cfm?id=657297},
+}
+
+@InProceedings{Lin2009,
+  author    = {Lin, C. and Yang, J.-M. and Cai, R. and Wang, X.-J. and Wang, W.},
+  title     = {Simultaneously modeling semantics and structure of threaded discussions: a sparse coding approach and its applications},
+  booktitle = {32nd international ACM/SIGIR conference on Research and development in information retrieval},
+  year      = {2009},
+  doi       = {10.1145/1571941.1571966},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
 }
 
 @InProceedings{Lin2012a,
@@ -12648,6 +12852,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.06.30},
 }
 
+@Article{McCallum2007,
+  author    = {McCallum, A. and Wang, X. and Corrada-Emmanuel, A.},
+  title     = {Topic and role discovery in social networks with experiments on enron and academic email},
+  journal   = {Journal of Artificial Intelligence Research},
+  year      = {2007},
+  volume    = {30},
+  number    = {1},
+  pages     = {249-272},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+  url       = {http://dl.acm.org/citation.cfm?id=1622637.1622644},
+}
+
 @Article{McDaid2011,
   author    = {McDaid, A. F. and Greene, D. and Hurley, N.},
   title     = {Normalized Mutual Information to evaluate overlapping community finding algorithms},
@@ -12663,7 +12881,7 @@ old title: The map equation and the resolution limit in community detection},
 }
 
 @Article{McHale1998,
-  author    = {Mc Hale, Michael},
+  author    = {Mc Hale, M.},
   title     = {A Comparison of WordNet and Roget's Taxonomy for Measuring Semantic Similarity},
   journal   = {arXiv},
   year      = {1998},
@@ -13332,6 +13550,18 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.12},
+}
+
+@InProceedings{Murakami2010,
+  author    = {Murakami, A. and Raymond, R.},
+  title     = {Support or oppose?: classifying positions in online debates from reply activities and opinion expressions},
+  booktitle = {23rd International Conference on Computational Linguistics},
+  year      = {2010},
+  pages     = {869-875},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+  url       = {http://dl.acm.org/citation.cfm?id=1944666},
 }
 
 @InProceedings{Murata2017,
@@ -14319,6 +14549,18 @@ old title: The map equation and the resolution limit in community detection},
   url       = {https://www.bibsonomy.org/bibtex/2eebd21a9b88a483383400d3c6409b135/brazovayeye},
 }
 
+@InProceedings{Park2011,
+  author    = {Park, S. and Lee, K. S. and Song, J.},
+  title     = {Contrasting opposing views of news articles on contentious issues},
+  booktitle = {49th Annual Meeting of the ACL: Human Language Technologies},
+  year      = {2011},
+  pages     = {340-349},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+  url       = {http://dl.acm.org/citation.cfm?id=2002516},
+}
+
 @InProceedings{Parsopoulos2002,
   author    = {Parsopoulos, K. E. and Vrahatis, M. N.},
   title     = {Particle swarm optimization method in multiobjective problems},
@@ -15248,6 +15490,17 @@ old title: The map equation and the resolution limit in community detection},
   groups        = {Just balance, Ignored},
   owner         = {Vincent},
   timestamp     = {2017.06.08},
+}
+
+@InProceedings{Riloff2003,
+  author    = {Riloff, E. and Wiebe, J.},
+  title     = {Learning extraction patterns for subjective expressions},
+  booktitle = {Conference on Empirical methods in natural language processing},
+  year      = {2003},
+  doi       = {10.3115/1119355.1119369},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
 }
 
 @Article{Rissanen1978,
@@ -16669,7 +16922,7 @@ old title: The map equation and the resolution limit in community detection},
 }
 
 @InProceedings{Song2017,
-  author    = {Song, Dongjin and Meyer, David A.},
+  author    = {Song, D. and Meyer, D. A.},
   title     = {Recommending positive links in signed social networks by optimizing a generalized AUC},
   booktitle = {29th AAAI Conference on Artificial Intelligence},
   year      = {2017},
@@ -17155,6 +17408,26 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.07.22},
 }
 
+@InProceedings{Takamura2005,
+  author    = {Takamura, H. and Inui, T. and Okumura, M.},
+  title     = {Extracting semantic orientations of words using spin model},
+  booktitle = {43rd Annual Meeting on ACL},
+  year      = {2005},
+  doi       = {10.3115/1219840.1219857},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+}
+
+@InProceedings{Tan2011,
+  author    = {Tan, C. and Lee, L. and Tang, J. and Jiang, L. and Zhou, M. and Li, P.},
+  title     = {User-level sentiment analysis incorporating social networks},
+  booktitle = {17th ACM/SIGKDD international conference on Knowledge discovery and data mining},
+  year      = {2011},
+  doi       = {10.1145/2020408.2020614},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+}
+
 @Article{Tan2016,
   author    = {Tan, S. and Lü, J.},
   title     = {An evolutionary game approach for determination of the structural conflicts in signed networks},
@@ -17185,7 +17458,7 @@ old title: The map equation and the resolution limit in community detection},
 @InProceedings{Tang2014,
   author    = {Tang, D. and Wei, F. and Yang, N. and Zhou, M. and Liu, T. and Qin, B.},
   title     = {Learning sentiment-specific word embedding for twitter sentiment classification},
-  booktitle = {52nd Annual Meeting of the Association for Computational Linguistics},
+  booktitle = {52nd Annual Meeting of the ACL},
   year      = {2014},
   pages     = {1555-1565},
   groups    = {Others, Ignored},
@@ -17353,6 +17626,17 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2017.07.23},
   url       = {https://www.isr.umd.edu/~baras/publications/papers/2005/05-35.pdf},
+}
+
+@InProceedings{Thomas2006,
+  author    = {Thomas, M. and Pang, B. and Lee, L.},
+  title     = {Get out the vote: Determining support or opposition from congressional floor-debate transcripts},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2006},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+  url       = {http://dl.acm.org/citation.cfm?id=1610075.1610122},
 }
 
 @Article{Tibshirani2001,
@@ -17665,6 +17949,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.28},
+}
+
+@Article{Turney2003,
+  author    = {Turney, P. D. and Littman, M. L.},
+  title     = {Measuring praise and criticism: Inference of semantic orientation from association},
+  journal   = {ACM Transactions on Information Systems},
+  year      = {2003},
+  volume    = {21},
+  number    = {4},
+  pages     = {315-346},
+  doi       = {10.1145/944012.944013},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
 }
 
 @Article{Turney2010,
@@ -18429,6 +18727,17 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Just balance, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.02},
+}
+
+@InProceedings{Wiebe2000,
+  author    = {Wiebe, J.},
+  title     = {Learning subjective adjectives from corpora},
+  booktitle = {17th National Conference on Artificial Intelligence and 12th Conference on Innovative Applications of Artificial Intelligence},
+  year      = {2000},
+  pages     = {735-740},
+  owner     = {Vincent},
+  timestamp = {2017.08.02},
+  url       = {http://dl.acm.org/citation.cfm?id=721121},
 }
 
 @Article{Wigner1955,
@@ -19724,7 +20033,7 @@ old title: The map equation and the resolution limit in community detection},
 }
 
 @PhdThesis{Zhao2005,
-  author    = {Zhao, Ying},
+  author    = {Zhao, Y.},
   title     = {Criterion functions for document clustering},
   school    = {University of Minnesota},
   year      = {2005},
